connect/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
        - name: connect
          image: ghcr.io/pmh-only/connect:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: connect-storage
      volumes:
        - name: connect-storage
          persistentVolumeClaim:
            claimName: connect-pvc
