connect/service.yml
apiVersion: v1
kind: Service
metadata:
  name: connect-service
spec:
  selector:
    app: connect
  ports:
    - name: webapp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mcp
      protocol: TCP
      port: 8081
      targetPort: 8081
